add_executable(test_fields test_fields.cpp)
add_executable(test_ecc test_ecc.cpp)
add_executable(test_dme test_dme.cpp ../src/utilities/utilities.cpp)
add_executable(test_ot test_ot.cpp ../src/ot/ot.cpp ../src/ot/dot.cpp )
add_executable(test_puda test_puda.cpp ../src/puda/puda.cpp)
add_executable(test_shamirss test_shamirss.cpp ../src/shamirss/shamirss.cpp)
add_executable(test_aes test_aes.cpp ../src/utilities/aes.cpp ../src/utilities/utilities.cpp)
add_executable(test_crc test_crc.cpp ../src/utilities/utilities.cpp)
add_executable(test_opprf test_opprf.cpp ../src/opprf/opprf.cpp ../src/ot/ot.cpp ../src/utilities/utilities.cpp ../src/utilities/aes.cpp)
# add_executable(test_elgamal test_elgamal.cpp ../src/elgamal/elgamal.cpp)


target_link_libraries(test_fields fields)
target_link_libraries(test_ecc ecc fields)
target_link_libraries(test_dme dme ecc fields)
target_link_libraries(test_ot dme ecc fields)
target_link_libraries(test_puda dme ecc fields)
target_link_libraries(test_shamirss fields)
target_link_libraries(test_aes OpenSSL::SSL)
target_link_libraries(test_opprf dme ecc fields OpenSSL::SSL)


add_test(NAME Fields COMMAND test_fields)
add_test(NAME EllipticCurve COMMAND test_ecc)
add_test(NAME DualModeEnc COMMAND test_dme)
add_test(NAME OT COMMAND test_ot)
add_test(NAME PUDA COMMAND test_puda)
add_test(NAME ShamirSS COMMAND test_shamirss)
add_test(NAME AES COMMAND test_aes)
add_test(NAME CRC COMMAND test_crc)
add_test(NAME OPPRF COMMAND test_opprf)
# add_test(NAME ELGAMAL COMMAND test_elgamal)